--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -61,4 +61,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="overlay_preview_button1" translatable="false" >Yaj</string>
     <string name="overlay_preview_button2" translatable="false" >Nej</string>
     <string name="notification_overlay_info">Reboot is required after\nchanging notification overlay</string>
+    <string name="wavvy_header">Wavvy (time)</string>
+    <string name="nature_header">Nature (time)</string>
+    <string name="nature_header_random">Nature (random)</string>
+    <string name="poly_header">Poly (time)</string>
 </resources>
